# VideoPlayer

./: .gitignore  .gitmodules  CMakeLists.txt  _build.bat  config.cmake  config.ini
VideoPlayer/: CMakeLists.txt  main.cpp  pch.h
